# ai-moderation-service

./: AI model based on whisper(after fixes).py  launch  main.py  pyproject.toml  requirements.txt
app/: config.py  dependencies.py  main.py
app/models/: healthcheck_response.py  transcribe_response.py
app/routers/: health.py  transcribe.py
app/services/: whisper_service.py
app/utils/: device.py
