[project]
name = "ai-moderation-service"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
    "fastapi==0.135.3",
    "numpy==1.26.4",
    "python-multipart>=0.0.22",
    "uvicorn[standard]==0.42.0",
    "faster-whisper>=1.2.1",
    "tensorboard>=2.20.0",
    "better-profanity>=0.7.0",
]
